# acp-pattern-api

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pre-commit.yml  rust-next.yml
crates/pcore/: Cargo.toml
crates/pstd/: Cargo.toml
