[package]
name = "pcore"
version = "0.0.1"
description = "pseudo `core` lib"
categories = []
keywords = []
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
default = []

[dependencies]

[lints]
workspace = true
